--- a/index.html
+++ b/index.html
@@ -27,57 +27,55 @@
     </div>
     <!-- section 2 -->
     <div class="section2" id="aboutMe">
-        <div class="ab">
-            <div class="que">
-                <h2>Who am I?</h2>
+        <div class="ab1">
+            <div class="que1">
+                <b>Who am I?</b>
             </div>
-            <div class="ans">
-                I'm a Rajyapal awardee(The Bharat Scouts and Guides) and an enthusiastic student, who loves to code.
+            <div class="ans1">
+                I'm a <u>Rajyapal awardee</u><br>(The Bharat Scouts and Guides) and an enthusiastic student, who loves to code.
                 Also eager to learn new technologies!
             </div>
         </div>
         <hr>
-        <div class="ab">
-            <div class="que">
-                <h2>Education</h2>
+        <div class="ab2">
+            <div class="que2">
+                <b>Education</b>
             </div>
-            <div class="ans">
-                Doing B.tech in Computer Engineering.
-                <br>
+            <div class="ans2">
+                Doing B.tech in Computer Engineering.<br>
                 Done diploma in Computer Engineering with 8.32 CGPA and also done ssc with 91.71 PR.
             </div>
         </div>
         <hr>
-        <div class="ab">
-            <div class="que">
-                <h2>Achievements</h2>
+        <div class="ab3">
+            <div class="que3">
+                <b>Achievements</b>
             </div>
-            <div class="ans">
-                Rajyapal Award,The Bharat Scouts and Guides(2016)
-                <br>
+            <div class="ans3">
+                Rajyapal Award,<br>The Bharat Scouts and Guides(2016)
+                <br><hr style="margin-top: 1%;margin-bottom: 1%;">
                 2<sup>nd</sup> rank in smart city Hackathon Rajkot,SSIP(2020)
             </div>
         </div>
         <hr>
-        <div class="ab">
-            <div class="que">
-                <h2>Skills</h2>
+        <div class="ab4">
+            <div class="que4">
+                <b>Skills</b>
             </div>
-            <div class="ans">
-                Leadership, Project management, Web designing
+            <div class="ans4">
+                Leadership,<br>Project Management,<br>Web Devlopment
             </div>
         </div>
         <hr>
-        <div class="ab">
-            <div class="que">
-                <h2>Known Technologies/Programming Languages</h2>
+        <div class="ab5">
+            <div class="que5">
+                <b>Known Technologies</b>
             </div>
-            <div class="ans">
+            <div class="ans5">
                 HTML, CSS, PHP, MySql, C, C++, Java, Python, Android
             </div>
         </div>
     </div>
-    <hr>
 
 
     <footer>
