--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             </div>
             <div>
-                <a href="facebook.com/harshang.patel03" target="_blank">
+                <a href="https://www.facebook.com/harshang.patel03" target="_blank">
                     <img src="media/Social media/facebook.svg" alt="facebook">
                 </a>
             </div>
