--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <b>Who am I?</b>
             </div>
             <div class="ans1">
-                I'm a <u>Rajyapal awardee</u><br>(The Bharat Scouts and Guides) and an <u>enthusiastic student</u>, who
+                I'm a <br><u>Rajyapal Award Winner</u><br>(The Bharat Scouts and Guides) and an <u>enthusiastic student</u>, who
                 loves to code.
                 <br>And Also eager to learn new technologies!
             </div>
