--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link rel="icon" href="media/h.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
 
-    <title>Welcome to harshang's profile</title>
+    <title>Welcome to Harshang's profile</title>
 </head>
 
 <body>
     <div class="outerNavbar">
-        <div class="navbar">
-            <a href="#home">Home</a>
-            <a href="#aboutMe">About Me</a>
-            <a href="#contact">Contact</a>
+        <div class="outerNavbar">
+            <div class="navbar">
+                <a href="#home">Home</a>
+                <a href="#aboutMe">About Me</a>
+                <!--<a href="certificate.html">certificates</a>-->
+                <a href="#contact">Contact</a>
+            </div>
         </div>
     </div>
 
