--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
             <div class="ans1">
                 I'm a <br><u>Rajyapal Award Winner</u><br>(The Bharat Scouts and Guides) and an <u>enthusiastic student</u>, who
-                loves to code.
-                <br>And Also eager to learn new technologies!
+                loves to code,
+                <br>and also eager to learn new technologies!
             </div>
         </div>
         <hr>
