--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="media/h.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
+    <link href="mobile.css" rel="stylesheet" media="screen and (max-width: 480px)" >
+    <link href="widescreen.css" rel="stylesheet" media="screen and (min-width: 481px)" >
 
     <title>Welcome to Harshang's profile</title>
 </head>
@@ -86,7 +88,7 @@
                 HTML, CSS, PHP, MySql, C, C++, Java, Python, Android
             </div>
         </div>
-        <hr>
+       
     </div>
     <footer>
         <div>
